@@ -12,6 +12,8 @@ Changes in 2.2dev
 - Sleep time of upload and download is now configurable through a CPU usage
 slider in the settings
 - Added option to move finished downloads to a different directory
+- Readded feature to show the total and the number of running torrents in the
+tab of each view
 
 Changes in 2.1.2
 - Fix 2 security vulnerabilities (thanks to Bryan Burns from Juniper Networks
